manifests/base/20-mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: coldchain
  labels:
    app: mosquitto
    app.kubernetes.io/part-of: coldchain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2
          ports:
            - containerPort: 1883
              name: mqtt
          volumeMounts:
            - name: mosquitto-config-vol
              mountPath: /mosquitto/config
            - name: mosquitto-auth
              mountPath: /mosquitto/auth
            - name: mosquitto-data
              mountPath: /mosquitto/data
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 3
            periodSeconds: 5
      volumes:
        - name: mosquitto-config-vol
          configMap:
            name: mosquitto-config
        - name: mosquitto-auth
          emptyDir: {}
        - name: mosquitto-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: coldchain
  labels:
    app: mosquitto
    app.kubernetes.io/part-of: coldchain
spec:
  type: ClusterIP
  ports:
    - port: 1883
      targetPort: 1883
      name: mqtt
  selector:
    app: mosquitto
