manifests/base/70-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coldchain-ingress
  namespace: coldchain
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - coldchain.salticidae.net
      secretName: coldchain-tls
  rules:
    - host: coldchain.salticidae.net
      http:
        paths:
          - path: /auth/callback
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
